# stencil

./: .gitignore  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml  desktop-build.yml  publish.yml
docs/: batch-processing.md  cli.md  computed-fields.md  editor.md  error-handling.md  index.md  python-api.md  schema.md  version-detection.md
editor/: index.html  package-lock.json  package.json
editor/src/: App.tsx  index.css
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/src/: lib.rs  main.rs
editor/src/components/: BatchExtractTab.tsx  CommandPalette.tsx  DiscriminatorPicker.tsx  ExportButton.tsx  FieldDialog.tsx  FieldNameDialog.tsx  FieldPanel.tsx  FileUpload.tsx  ImportButton.tsx  MissingFieldsPanel.tsx  RemapSuggestionsDialog.tsx  SpreadsheetView.tsx  SuggestionPanel.tsx  ValidationPanel.tsx  VersionManager.tsx  YamlPreview.tsx
editor/src/hooks/: useSchema.ts  useSpreadsheet.ts
editor/src/lib/: addressing.ts  excel.ts  field-fingerprints.ts  field-naming.ts  storage.ts  suggestions.ts  types.ts  yaml-export.ts
scripts/: release.py
stencilpy/: README.md  hatch_build.py  pyproject.toml
stencilpy/src/stencilpy/: __init__.py  addressing.py  batch.py  cli.py  computed.py  concurrent.py  errors.py  extractor.py  models.py  scalar_refs.py  schema.py  ui.py  versioning.py
stencilpy/src/stencilpy/ui_dist/: index.html
stencilpy/src/stencilpy/ui_dist/assets/: index-BBgxXuYl.js  index-Cbq-pZeC.css
stencilpy/tests/: conftest.py  test_addressing.py  test_cli.py  test_computed.py  test_extractor.py  test_models.py  test_schema.py  test_stencil.py  test_ui.py
