[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stencilpy"
version = "0.1.0"
description = "Extract structured data from Excel files using YAML schema definitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stencilpy"]
