[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "stencilpy"
dynamic = ["version"]
description = "Extract structured data from Excel files using YAML schema definitions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Phlo House" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: File Formats",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["excel", "pydantic", "yaml", "extraction", "spreadsheet"]
dependencies = [
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/phlohouse/stencil"
Repository = "https://github.com/phlohouse/stencil"
Issues = "https://github.com/phlohouse/stencil/issues"

[project.optional-dependencies]
concurrent = [
    "tqdm>=4.60",
]
dev = [
    "pytest",
    "pytest-cov",
    "tqdm>=4.60",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stencilpy"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
search_parent_directories = true
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "src/stencilpy/_version.py"
